# ogre-next

./: BUILD.bazel  CMakeLists.txt  colcon.pkg
CMake/: ConfigureBuild.cmake
CMake/Templates/: OGRE.pc.in
CMake/Utils/: OgreConfigTargets.cmake
Components/RTShaderSystem/include/: OgreShaderPrerequisites.h
PlugIns/ParticleFX/src/: OgreParticleFXPlugin.cpp
RenderSystems/GL3Plus/include/: OgreGL3PlusPrerequisites.h
RenderSystems/GL3Plus/src/windowing/EGL/PBuffer/: OgreEglPBufferSupport.cpp
Samples/: BUILD.bazel
Samples/2.0/Common/src/: GraphicsSystem.cpp
Samples/2.0/Tutorials/Tutorial_VulkanExternal/: Tutorial_VulkanExternal.cpp
